@@ -4,7 +4,8 @@ use warnings;
 
 # Modules.
 use App::Pod::Example;
-use Test::More 'tests' => 1;
+use Test::More 'tests' => 2;
+use Test::NoWarnings;
 
 # Test.
 is($App::Pod::Example::VERSION, 0.05, 'Version.');
